--- a/main.css
+++ b/main.css
@@ -49,6 +49,7 @@ h5,h4,h3,h2,h1,p,a {
 .top-link  a{
     color: #a5a4a4;
     font-weight: 300;
+    line-height: 1.5;
 }
 @media screen and (max-width:768px) {
     .top-title h4{
@@ -125,9 +126,9 @@ h5,h4,h3,h2,h1,p,a {
     top: 0;right: 0;
     height: 100%;
     width: 100%;
-    background-color: #cce2e1;
+    backdrop-filter: blur(30px);
     display: none;
-    transition: 1s;
+    transition-duration: 3s;
 }
 
 
@@ -145,7 +146,7 @@ h5,h4,h3,h2,h1,p,a {
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: 1s;
+    transition-duration: 3s;
 }
 
 /* ccontact */
