--- a/main.css
+++ b/main.css
@@ -28,12 +28,72 @@ h5,h4,h3,h2,h1,p,a {
 .bg {
     background: gray;
 }
+
+/* load */
+.load-box {
+    content: '';
+    position: absolute;
+    z-index: 999;
+    width: 100%;
+    height: 100vh;
+    background: #fff9f0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.loader {
+    opacity: 1;
+    transition: .5s;
+    display: block;
+    width: 48px;
+    height: 78px;
+    position: relative;
+    box-sizing: border-box;
+    border: 2px solid #000000;
+    margin: auto;
+    border-radius: 50% 50% 50% 50% / 25% 25% 25% 25%;
+  }
+  .loader::before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 20px;
+    transform: translateX(-50%);
+    width: 4px;
+    height: 4px;
+    background: #000000;
+    border-radius: 10px;
+    animation: scrollDown 1.5s linear infinite;
+  }
+  @keyframes scrollDown {
+    0% {
+      top: 15px;
+      height: 4px;
+      opacity: 1;
+    }
+    33% {
+      top: 15px;
+      height: 40px;
+    }
+    66% {
+      top: 50px;
+      height: 10px;
+      opacity: 1;
+    }
+    100% {
+      top: 56px;
+      height: 4px;
+      opacity: 0;
+    }
+  }
+
+
 /* nav */
 .top-fixed {
     width: 100%;
     position: fixed;
     top: 0;right: 0;
-    z-index: 9999;
+    z-index: 500;
     background: white;
 }
 .top-box {
@@ -45,8 +105,9 @@ h5,h4,h3,h2,h1,p,a {
     font-weight: 300;
     line-height: 1.5;
     cursor: pointer;
+    display: inline;
 }
-.top-link  a{
+.top-link a{
     color: #a5a4a4;
     font-weight: 300;
     line-height: 1.5;
@@ -126,9 +187,9 @@ h5,h4,h3,h2,h1,p,a {
     top: 0;right: 0;
     height: 100%;
     width: 100%;
-    backdrop-filter: blur(30px);
-    display: none;
-    transition-duration: 3s;
+    backdrop-filter: blur(0px);
+    opacity: 0;
+    transition-duration: .5s;
 }
 
 
@@ -142,11 +203,12 @@ h5,h4,h3,h2,h1,p,a {
 }
 
 .proj-imgbox:hover .proj-imgboxtitle{
-    display: block;
+    backdrop-filter: blur(30px);
+    opacity: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition-duration: 3s;
+    transition-duration: .5s;
 }
 
 /* ccontact */
