--- a/main.css
+++ b/main.css
@@ -29,6 +29,14 @@ h5,h4,h3,h2,h1,p,a {
     background: gray;
 }
 
+/* changeclass */
+
+.changed {
+    background: #282f40 !important;
+    color: white !important;
+}
+
+
 /* load */
 .load-box {
     content: '';
@@ -49,7 +57,7 @@ h5,h4,h3,h2,h1,p,a {
     height: 78px;
     position: relative;
     box-sizing: border-box;
-    border: 2px solid #000000;
+    border: 2px solid #282f40;
     margin: auto;
     border-radius: 50% 50% 50% 50% / 25% 25% 25% 25%;
   }
@@ -61,7 +69,7 @@ h5,h4,h3,h2,h1,p,a {
     transform: translateX(-50%);
     width: 4px;
     height: 4px;
-    background: #000000;
+    background: #282f40;
     border-radius: 10px;
     animation: scrollDown 1.5s linear infinite;
   }
@@ -164,14 +172,14 @@ h5,h4,h3,h2,h1,p,a {
         align-items: end;
     }
 }
-.carousel-control-next-icon {
+/* .carousel-control-next-icon {
     background-image: none;
     color: white;
 }
 .carousel-control-prev-icon {
     background-image: none;
     color: white;
-}
+} */
 
 /* down */
 .downbox {
@@ -195,8 +203,8 @@ h5,h4,h3,h2,h1,p,a {
     animation: Down 1.5s linear infinite;
     width: 20px;
     height: 20px;
-    border-left: 2px solid black;
-    border-bottom: 2px solid black;
+    border-left: 2px solid #282f40;
+    border-bottom: 2px solid #282f40;
   }
 
 /* about */
