--- a/main.css
+++ b/main.css
@@ -40,7 +40,7 @@ h5,h4,h3,h2,h1,p,a {
 /* load */
 .load-box {
     content: '';
-    position: absolute;
+    position: fixed;
     z-index: 999;
     width: 100%;
     height: 100vh;
