--- a/main.css
+++ b/main.css
@@ -21,10 +21,10 @@ h5,h4,h3,h2,h1,p,a {
     font-family: "Poppins", sans-serif; 
 }
 .color-g {
-    color: #a5a4a4;
+    color: #fff9f0;
 }
 .color-b {
-    color: #363636;
+    color: #a5a4a4;
 }
 .bg {
     background: gray;
@@ -138,14 +138,18 @@ h5,h4,h3,h2,h1,p,a {
 /* fontend */
 
 .fontendsize {
+    opacity: 0;
     font-size: 10rem;
     line-height: 1.2;
     font-weight: 600;
 }
+.fontendsize.is-inview {
+    opacity: 1;
+}
 @media screen and (max-width:768px) {
     .fontendsize {
-        font-size: 5rem;
-        line-height: 1;
+        font-size: 3rem;
+        line-height: 1.5;
         font-weight: 600;
     }
 }
@@ -245,16 +249,51 @@ h5,h4,h3,h2,h1,p,a {
     opacity: 0;
     transition:opacity .7s ease;
     font-size: 2rem;
+    line-height: 1.5;
 }
 
 .about-box p.is-inview{
     opacity: 1;
 }
+.about-img {
+    position: relative;
+    opacity: 0;
+}
+.about-img.is-inview {
+    opacity: 1;
+    transition:opacity .5s ease;
+}
+.about-img::after {
+    content: '';
+    position: absolute;
+    top: 0;right: 0;
+    width: 100%;
+    height: 100%;
+    background: #282f40;
+    opacity: .5;
+    z-index: 1;
+}
+
+.about-year {
+    font-weight: 600;
+    font-size: 4rem;
+    line-height: 1;
+}
 
 /* project */
 
+.Project-title {
+    opacity: 0;
+}
+.Project-title.is-inview {
+    opacity: 1;
+    transition: .5s ease;
+}
 .proj-imgbox {
     position: relative;
+}
+.about-year {
+    position: sticky;
 }
 .proj-imgbox img {
     box-shadow: 4px 4px 5px 2px gray;
@@ -294,6 +333,9 @@ opacity: 1;
 }
 
 /* ccontact */
+.contact-box p,.contact-box span,.contact-box a{
+    font-size: 1rem;
+}
 .contact-tel {
     text-decoration: underline ;
 }
