--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@
     list-style: none;
     text-decoration: none;
     font-family: "Poppins", sans-serif;
+    word-break: break-all;
 }
 body {
     background: #fffdf5;
@@ -14,6 +15,7 @@ body {
 a {
     cursor: none;
 }
+
 #myCursor {
     width: 54px;
     height: 54px;
@@ -21,7 +23,6 @@ a {
     border: solid 2px #d9d9d9;
     position: absolute;
     transition-duration: 0.1s;
-    box-shadow: 0px 0px 15px 3px rgba(#94d6ff,1);
     box-sizing: border-box;
     pointer-events: none;
     z-index: 9999;
@@ -122,6 +123,9 @@ h5,h4,h3,h2,h1,p,a {
     z-index: 500;
     background: white;
 }
+.rwdbtnbox {
+    display: none;
+}
 @media screen and (max-width:768px) {
     .top-fixed {
         width: 100%;
@@ -129,6 +133,39 @@ h5,h4,h3,h2,h1,p,a {
         top: 0;right: 0;
         z-index: 500;
         background: white;
+    }
+    .rwdbtnbox {
+        display: block;
+    }
+    .rwdbtn {
+        content: '';
+        position: absolute;
+        top: 0;right: 3%;
+        bottom: 0;
+        margin: auto;
+        width: 30px;
+        height: 1px;
+        box-shadow: 0px -1px 0px rgb(255, 255, 255), 0px -8px 0px white, 0px -15px 0px white;
+        z-index: 999;
+        transition: .7s;
+    }
+    #rwdbtn:checked ~ .navbar-btn {
+        right: 0;
+    }
+    #rwdbtn:checked ~ .rwdbtnbox .rwdbtn {
+        box-shadow: 0px -1px 0px #282f40, 0px -8px 0px #282f40, 0px -15px 0px #282f40;
+    }
+    .navbar-btn {
+        position: absolute;
+        top: 0;right: -100%;
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+        background-color: #fff9f0;
+        transition: .7s ease;
+    }
+    .navbar-btn a{
+        color: #282f40;
     }
 }
 /* .top-box {
