--- a/main.css
+++ b/main.css
@@ -160,15 +160,16 @@ h5,h4,h3,h2,h1,p,a {
         margin: auto;
         width: 30px;
         height: 1px;
-        box-shadow: 0px -1px 0px rgb(255, 255, 255), 0px -8px 0px white, 0px -15px 0px white;
+        box-shadow: 0px 7px 0px white, 0px 0px 0px white, 0px -7px 0px white;
         z-index: 999;
         transition: .7s;
+        background: white;
     }
     #rwdbtn:checked ~ .navbar-btn {
         right: 0;
     }
     #rwdbtn:checked ~ .rwdbtnbox .rwdbtn {
-        box-shadow: 0px -1px 0px #282f40, 0px -8px 0px #282f40, 0px -15px 0px #282f40;
+        box-shadow: 0px -1px 0px #a5a4a4, 0px -8px 0px #a5a4a4, 0px -15px 0px #a5a4a4;
     }
     .navbar-btn {
         position: absolute;
@@ -328,6 +329,14 @@ h5,h4,h3,h2,h1,p,a {
         right: 0;
         z-index: -1;
     }
+
+    .about-box p {
+        opacity: 0;
+        transition:opacity .7s ease;
+        font-size: 1.2rem;
+        line-height: 1.5;
+    }
+
 }
 .about-img {
     position: relative;
