--- a/main.css
+++ b/main.css
@@ -5,7 +5,6 @@
     list-style: none;
     text-decoration: none;
     font-family: "Poppins", sans-serif;
-    word-break: break-all;
 }
 body {
     background: #fffdf5;
@@ -192,7 +191,6 @@ h5,h4,h3,h2,h1,p,a {
     color: #a5a4a4;
     font-weight: 300;
     line-height: 1.5;
-    cursor: pointer;
     display: inline;
 }
 .top-link a{
@@ -367,7 +365,11 @@ h5,h4,h3,h2,h1,p,a {
     line-height: 1;
     transition: none !important;
 }
-
+@media screen and (max-width:768px) {
+    .about-year {
+        font-size: 2rem;
+    }
+}
 /* project */
 
 .Project-title {
@@ -403,6 +405,11 @@ h5,h4,h3,h2,h1,p,a {
 .project-box a.is-inview{
     animation: fontup 1s linear ;
     animation-fill-mode: forwards; /*呈現動畫結束樣式*/
+}
+@media screen and (max-width:768px) {
+    .project-box a{
+        font-size: 2.2em;
+    }
 }
 .proj-imgbox {
     position: relative;
@@ -450,11 +457,6 @@ opacity: 1;
     align-items: flex-end;
     height: 40vh;
 }
-@media screen and (max-width:768px) {
-    .notebox{
-        height: auto;
-    }
-}
 .notebox a {
     text-align: right;
     display: block;
@@ -462,6 +464,14 @@ opacity: 1;
     color: #a5a4a4;
     font-weight: 700;
     opacity: 0;
+}
+@media screen and (max-width:768px) {
+    .notebox{
+        height: auto;
+    }
+    .notebox a{
+        font-size: 1.8em;
+    }
 }
 
 .notebox a.is-inview {
